fix: Java 21에서 제거된 PrintStringDeduplicationStatistics 옵션 수정 (#34)
* fix: Java 21에서 제거된 PrintStringDeduplicationStatistics 옵션 수정

- PrintStringDeduplicationStatistics는 Java 9+에서 제거됨
- Java 9+ 통합 로깅 프레임워크 사용: -Xlog:gc+stringdedup=debug
- 문서 업데이트: 새로운 로깅 옵션 반영

* docs: 문자열 중복 제거 통계 모니터링 방법 업데이트

- PrintStringDeduplicationStatistics 제거에 따른 문서 업데이트
- Java 9+ 통합 로깅 프레임워크 사용 방법 반영